# textopt

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  build_debug.sh
docs/: README.md  plot_ellipse.py  plot_ellipse_full.py  plot_texture.py  plot_texture_shallow.py  plot_tool_path.py  plot_tool_path_ellipsoid.py  plot_tool_path_newton.py  plot_tool_path_param.py
examples/: opt1.yaml  plot1.yaml  plot2.yaml  single1.yaml
examples/test/: opt1.yaml  plot2.yaml  single1.yaml
examples/v0.1.0/: opt.yaml  plot2.yaml
include/: MMASolver.hpp  analysis.hpp  config.hpp  newton.hpp  newton_opt.hpp  opt_func.hpp  param.hpp  render.hpp  slp.hpp  smooth.hpp  texture.hpp  texture_shallow.hpp  util.hpp
scripts/: plot.py  plot_f_shallow.py  plot_fxap.py  plot_vc.py  plot_vc_shallow.py
src/: CMakeLists.txt  MMASolver.cpp  analysis.cpp  config.cpp  main.cpp  newton_opt.cpp  opt_func.cpp  render.cpp  slp.cpp  texture.cpp  texture_shallow.cpp
